# FileSpider

./: .gitignore  Makefile  README.md  default.nix  docker-compose.yml  filespider.nix  frontend.nix  nginx.conf  openapi.yml  package.json  rust-nightly.nix  shell.nix  test.xopp  vite.config.ts
.github/workflows/: build.yml  ci.yml  docker.yml  frontend.yml  tests.yml
app/: .gitignore  Cargo.toml  Trunk.toml  index.html  tauri
app/common/: Cargo.toml
app/common/src/: lib.rs
app/src/: app.rs  document.rs  main.rs
app/src-tauri/: .env  Cargo.toml  tauri.conf.json
app/src-tauri/migrations/: 20230708054512_init.up.sql
app/src-tauri/src/: main.rs
app/src-tauri/src/document/: commands.rs  mod.rs
backend/: .gitignore  Dockerfile  Makefile  settings.gradle.kts
backend/app/: build.gradle.kts
backend/app/src/main/kotlin/me/kruemmelspalter/: FileSystemController.kt
backend/app/src/main/kotlin/me/kruemmelspalter/file_spider/backend/: App.kt  FileSpiderApplication.kt  FileSpiderConfiguration.kt  FileSystemController.kt  FileSystemService.kt  RenderingException.kt
backend/app/src/main/kotlin/me/kruemmelspalter/file_spider/backend/api/: DocumentController.kt  FileSpiderApplication.kt  FileSpiderConfiguration.kt
backend/app/src/main/kotlin/me/kruemmelspalter/file_spider/backend/database/: CacheRepository.kt  DatabaseConfiguration.kt  DatabaseConnection.kt  Document.kt  DocumentRepository.kt  Tag.kt
backend/app/src/main/kotlin/me/kruemmelspalter/file_spider/backend/database/dao/: CacheRepository.kt  DocumentDao.kt  DocumentMeta.kt  DocumentRepository.kt  DocumentService.kt
backend/app/src/main/kotlin/me/kruemmelspalter/file_spider/backend/database/model/: Document.kt  Tag.kt
backend/app/src/main/kotlin/me/kruemmelspalter/file_spider/backend/renderer/: CommandRenderer.kt  MimeSpecificRenderer.kt  PlainRenderer.kt  RenderCache.kt  RenderService.kt  Renderer.kt  RenderingException.kt  TempFileRenderer.kt
backend/app/src/main/kotlin/me/kruemmelspalter/file_spider/backend/services/: DocumentMeta.kt  DocumentService.kt  FileSystemService.kt  RenderedDocument.kt
backend/app/src/main/resources/: application.conf
backend/app/src/main/resources/sql/: init.sql
backend/app/src/test/kotlin/me/kruemmelspalter/file_spider/backend/: AppTest.kt
client/: index.js  package.json
frontend/: .dockerignore  .eslintrc.js  Dockerfile  Makefile  README.md  jest.config.js  nuxt.config.js  package.json
frontend/components/: DocumentCreationDialog.vue  DocumentDisplay.vue
frontend/layouts/: blank.vue  default.vue
frontend/pages/: _id.vue  index.vue
frontend/store/: index.js
frontend/test/: index.spec.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Tauri.linux.toml  Tauri.toml  tauri.conf.json
src-tauri/.sqlx/: query-35620010335dbe8c9da33a41d7199011220c7397d1510571003eae53b6112548.json  query-5af60b669c98172d51135a84f47054c8429d92e707f4de285bbe9b7bb7735355.json  query-63fc9cec2738ee70c35bde3d0f97e874cac848b59e82161a58879d8d1d3c57f2.json  query-69197660fa586fbf41145b66fa453b5f1ce2eefedc2e259d1bd03fd0a0a8b436.json  query-8a11f66d0331afabea53a95e99354711926831148546fa1908ba7d423b1a8bdb.json  query-a18f3a20d9f37dfedcce8bb4508375947e39abe9603bd6dd053aef488affa3f7.json  query-a7fb5ec7d74eb5611fc197fad48723e70c9c5baaf0b8c5481b1c1a338f91e6b1.json  query-ba968b7ae02ab375b25fc1c05e879ab98b7fdedf3200bcdf2b3a9475bce58556.json  query-ccba131029ce87db893168e41c44e4fb8a2ab893073bee504be28819a63279ef.json  query-d4e766ed466718dd97b3a9079b34c1738a64903cec805f63372e8d34961efb91.json  query-d545b37796b3aea41c7b5a3f809853f34560f81f88f08936307607075821c393.json  query-dac159c7c481adcfbea6fa43e3e256be4f7b626ff6cd872a1dbcd4a7f7b6fdc5.json  query-dacdced4a7a4d490c586f026407b3fb7fc98291ce6eac02b90de08d61baa0334.json  query-dafa6db3633caac9f659232539953dc512a21602a98933ea5d2572ab85309c0d.json  query-e58f100e6f31be949e116a6d5b82edf69d2c96f7edce76ab537db30d2ac2b0af.json  query-f396a7168d504f7fbd179af5599b815600a5f315ae68f04fbf5b0c2a008c762a.json
src-tauri/assets/: latex_template.tex  xopp_template.xopp
src-tauri/migrations/: 20230708054512_init.down.sql  20230708054512_init.up.sql
src-tauri/src/: db.rs  directories.rs  lib.rs  main.rs  types.rs
src-tauri/src/document/: commands.rs  mod.rs  render.rs  tests.rs
src-tauri/src/settings/: commands.rs  mod.rs
src/components/: TauriFileInput.vue
tauri/: .gitignore  Cargo.toml  Trunk.toml  index.html
tauri/src/: app.rs  document.rs
tauri/src-tauri/icons/: icon.icns
