[package]
name = "filespider"
version = "2.0.0-2"
description = "A Tauri App"
authors = ["Kruemmelspalter"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "filespider"
path = "src/main.rs"

[[bin]]
name = "migrator"
path = "src/bin/migrator.rs"

[lib]
name = "filespider"
path = "src/lib.rs"


[profile.dev.package."*"]
opt-level = 3


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-open", "fs-read-file", "protocol-asset", "shell-open", "config-toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v1"] }
eyre = "0.6.8"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.2", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
    "mac_address",
    "uuid",
] }
mac_address = { version = "1.1.5", features = ["serde"] }
futures = "0.3.28"
fxhash = { version = "0.2.1", features = [] }
async-recursion = "1.0.5"
async-trait = "0.1.74"
tempfile = "3.8.0"
log = "0.4.20"
env_logger = "0.10.0"
pdf = "0.9.0"
flate2 = "1.0.28"
clap = { version = "4.4.11", features = ["derive"] }
json5 = "0.4.1"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.52.0", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os="linux")'.dependencies]
dbus = "0.9.7"
dbus-tokio = "0.7.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
