[package]
name = "filespider_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
eyre = "0.6.8"
serde = { version = "1.0.174", features = ["serde_derive"] }
sqlx = { version = "0.7.1", features = ["sqlx-sqlite"] }
uuid = "1.4.1"
