[package]
name = "filespider_be"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
filespider_common = { path = "../common" }
eyre = "0.6.8"
sqlx = { version = "0.7.0", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
    "migrate",
] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.0", features = ["serde", "v1"] }
chrono = { version = "0.4.26", features = ["serde"] }
mac_address = "1.1.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
